--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-native-community/geolocation": "^3.4.0",
     "@react-native-google-signin/google-signin": "^16.0.0",
     "@react-native/new-app-screen": "0.81.4",
+    "@react-navigation/bottom-tabs": "^7.9.0",
     "@react-navigation/native": "^7.1.19",
     "@react-navigation/native-stack": "^7.6.1",
     "axios": "^1.13.2",
